Added fields of access. Added one more constructor. Added constant. Deleted commented fields. Extracted constants and corrected some code.